Backport 7b81a9c75d60f6eb2727515bacfffcf7cf15e128